<resources>
    <string name="app_name">lilim</string>
    <string name="register">REGISTRATE</string>
    <string name="noAccount">No tienes cuenta?</string>
    <string name="login_text">Iniciar Sesion</string>
    <string name="password">Contraseña(6 digitos)</string>
    <string name="mail">Correo Electronico</string>
    <string name="participacion_ciudadana">Participacion Ciudadana</string>
    <string name="App_icon_description">App icon</string>
    <string name="guest_text">Iniciar Como Invitado</string>
    <string name="password_confirm">Confirmar Contraseña(6 digitos)</string>
    <string name="description">Descripcion generica para views de prueba</string>
    <string name="challenge_description">Imagen del reto a mostrar</string>
    <string name="comment_description">Icono de mensajes</string>
</resources>
