<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/margin_min"
    android:layout_marginEnd="@dimen/margin_min"
    android:layout_marginStart="@dimen/margin_min"
    android:layout_marginBottom="@dimen/margin_min"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrayMaterialDark"
    card_view:cardElevation="4dp">

    <ImageView
        android:id="@+id/card_background"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/style_container"
        android:contentDescription="@string/challenge_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/card_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/margin_standard"
        android:text="@string/app_name"
        android:textColor="@color/colorWhiteMaterial"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_background"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:contentDescription="@string/comment_description"
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/card_background"
        card_view:srcCompat="@drawable/ic_comment_white" />


</android.support.constraint.ConstraintLayout>